--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/NewMap.NewMap
-EditorStartupMap=/Game/Map/NewMap.NewMap
+GameDefaultMap=/Game/Map/Pickmin.Pickmin
+EditorStartupMap=/Game/Map/Pickmin.Pickmin
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
